- ordenaçao tela de pesquisa estado - docker build - parametros documentaçao
